--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -38,7 +38,17 @@ header {
 section {
   margin: 40px 0 0 0;
 }
-nav a,
+
+nav a {
+  color: $black;
+  text-decoration: none;
+}
+
+img {
+  max-width: 780px;
+}
+
+nav a.selected,
 p a {
   color: $black;
   text-decoration: none;
